# my_tetris_2018

./: CMakeLists.txt  Makefile  test  test2  tetris
include/: game.h  my.h  parser.h  tetris.h
lib/my/: Makefile  get_next_line.c  get_next_line.h  get_next_line_2.c  my.h  my_fact_rec.c  my_find_prime_sup.c  my_getnbr.c  my_getnbr_base.c  my_int_to_str.c  my_is_prime.c  my_memset.c  my_power_rec.c  my_put_nbr.c  my_putchar.c  my_puterror.c  my_putnbr_base.c  my_putstr.c  my_revstr.c  my_show_wordtab.c  my_strcat.c  my_strcmp.c  my_strdup.c  my_strlen.c  my_strlowcase.c  my_strmcat.c  my_strncmp.c  my_strsplit.c  my_strstr.c
src/: action_game.c  check.c  check_tetrimino.c  debug.c  display.c  display_utils.c  drawer.c  game.c  game_utils.c  mini_utils.c  parser.c  parser_setter.c  parser_utils.c  pause.c  remove_line.c  score.c  score_lvl.c  set_rotated.c  setupterm.c  tetrimino.c  tetris.c  title.c  tools.c  utils.c
