cmake_minimum_required(VERSION 3.13)
project(PSU_tetris_2018 C)

set(CMAKE_C_STANDARD 11)

include_directories(include)
include_directories(lib/my)

add_executable(PSU_tetris_2018
    include/game.h
    include/my.h
    include/parser.h
    include/tetris.h
    lib/my/convert_base.c
    lib/my/get_next_line.c
    lib/my/get_next_line.h
    lib/my/get_next_line_2.c
    lib/my/my.h
    lib/my/my_char_isfactor.c
    lib/my/my_fact_rec.c
    lib/my/my_find_prime_sup.c
    lib/my/my_getnbr.c
    lib/my/my_getnbr_base.c
    lib/my/my_int_to_str.c
    lib/my/my_is_prime.c
    lib/my/my_isneg.c
    lib/my/my_memset.c
    lib/my/my_memset_str.c
    lib/my/my_power_rec.c
    lib/my/my_put_nbr.c
    lib/my/my_putchar.c
    lib/my/my_puterror.c
    lib/my/my_putnbr_base.c
    lib/my/my_putnstr.c
    lib/my/my_putstr.c
    lib/my/my_revstr.c
    lib/my/my_show_wordtab.c
    lib/my/my_showstr.c
    lib/my/my_sort_int_tab.c
    lib/my/my_sort_str_tab.c
    lib/my/my_square_root.c
    lib/my/my_str_contains.c
    lib/my/my_str_isalpha.c
    lib/my/my_str_islower.c
    lib/my/my_str_isnum.c
    lib/my/my_str_isprintable.c
    lib/my/my_str_isupper.c
    lib/my/my_str_to_wordtab.c
    lib/my/my_strcapitalize.c
    lib/my/my_strcat.c
    lib/my/my_strcmp.c
    lib/my/my_strcpy.c
    lib/my/my_strdup.c
    lib/my/my_stricmp.c
    lib/my/my_strlen.c
    lib/my/my_strlowcase.c
    lib/my/my_strmcat.c
    lib/my/my_strncat.c
    lib/my/my_strncmp.c
    lib/my/my_strncpy.c
    lib/my/my_strsplit.c
    lib/my/my_strstr.c
    lib/my/my_strtablen.c
    lib/my/my_strupcase.c
    lib/my/my_swap.c
    src/action_game.c
    src/check.c
    src/check_tetrimino.c
    src/debug.c
    src/display.c
    src/display_utils.c
    src/drawer.c
    src/game.c
    src/game_utils.c
    src/mini_utils.c
    src/parser.c
    src/parser_setter.c
    src/parser_utils.c
    src/pause.c
    src/remove_line.c
    src/score.c
    src/score_lvl.c
    src/set_rotated.c
    src/setupterm.c
    src/tetrimino.c
    src/tetris.c
    src/title.c
    src/tools.c
    src/utils.c)
